--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,19 @@
-@import url('/css/layout/base.css');
-@import url('/css/layout/normalize.css');
+@import url('./css/layout/base.css');
+@import url('./css/layout/normalize.css');
 
-@import url('/css/blocks/container.css');
-@import url('/css/blocks/header.css');
-@import url('/css/blocks/main-page-wrapper.css');
-@import url('/css/blocks/nav.css');
-@import url('/css/blocks/contacts.css');
-@import url('/css/blocks/btn.css');
-@import url('/css/blocks/intro.css');
-@import url('/css/blocks/offers.css');
-@import url('/css/blocks/paginator.css');
-@import url('/css/blocks/about.css');
-@import url('/css/blocks/news.css');
-@import url('/css/blocks/footer.css');
-@import url('/css/blocks/social__path.css');
+@import url('./css/blocks/container.css');
+@import url('./css/blocks/header.css');
+@import url('./css/blocks/main-page-wrapper.css');
+@import url('./css/blocks/nav.css');
+@import url('./css/blocks/contacts.css');
+@import url('./css/blocks/btn.css');
+@import url('./css/blocks/intro.css');
+@import url('./css/blocks/offers.css');
+@import url('./css/blocks/paginator.css');
+@import url('./css/blocks/about.css');
+@import url('./css/blocks/news.css');
+@import url('./css/blocks/footer.css');
+@import url('./css/blocks/social__path.css');
 
 
 
