--- a/css/main__pages-css/service_page_main.css
+++ b/css/main__pages-css/service_page_main.css
@@ -1,20 +1,20 @@
-@import url('./css/layout/base.css');
-@import url('./css/layout/normalize.css');
+@import url('./layout/base.css');
+@import url('./layout/normalize.css');
 
-@import url('./css/blocks/service_base.css');
-@import url('./css/blocks/header.css');
-@import url('./css/blocks/contacts.css');
-@import url('./css/blocks/nav.css');
-@import url('./css/blocks/footer.css');
-@import url('./css/blocks/social__path.css');
-@import url('./css/blocks/paginator.css');
-@import url('./css/blocks/container.css');
-@import url('./css/blocks/wrapper.css');
-@import url('./css/blocks/btn.css');
-@import url('./css/blocks/breadcrumbs.css');
-@import url('./css/blocks/inner__section.css');
-@import url('./css/blocks/page__content.css');
-@import url('./css/blocks/partners.css');
-@import url('./css/blocks/services.css');
-@import url('./css/blocks/dropdown__menu.css');
-@import url('./css/blocks/top__line.css');
+@import url('./blocks/service_base.css');
+@import url('./blocks/header.css');
+@import url('./blocks/contacts.css');
+@import url('./blocks/nav.css');
+@import url('./blocks/footer.css');
+@import url('./blocks/social__path.css');
+@import url('./blocks/paginator.css');
+@import url('./blocks/container.css');
+@import url('./blocks/wrapper.css');
+@import url('./blocks/btn.css');
+@import url('./blocks/breadcrumbs.css');
+@import url('./blocks/inner__section.css');
+@import url('./blocks/page__content.css');
+@import url('./blocks/partners.css');
+@import url('./blocks/services.css');
+@import url('./blocks/dropdown__menu.css');
+@import url('./blocks/top__line.css');
