--- a/css/main__pages-css/main__page.css
+++ b/css/main__pages-css/main__page.css
@@ -1,20 +1,20 @@
-@import url('./layout/base.css');
-@import url('./layout/normalize.css');
+@import url('../layout/base.css');
+@import url('../layout/normalize.css');
 
-@import url('./blocks/container.css');
-@import url('./blocks/header.css');
-@import url('./blocks/main-page-wrapper.css');
-@import url('./blocks/nav.css');
-@import url('./blocks/contacts.css');
-@import url('./blocks/btn.css');
-@import url('./blocks/intro.css');
-@import url('./blocks/offers.css');
-@import url('./blocks/paginator.css');
-@import url('./blocks/about.css');
-@import url('./blocks/news.css');
-@import url('./blocks/footer.css');
-@import url('./blocks/social__path.css');
-@import url('./blocks/dropdown__menu.css');
+@import url('../blocks/container.css');
+@import url('../blocks/header.css');
+@import url('../blocks/main-page-wrapper.css');
+@import url('../blocks/nav.css');
+@import url('../blocks/contacts.css');
+@import url('../blocks/btn.css');
+@import url('../blocks/intro.css');
+@import url('../blocks/offers.css');
+@import url('../blocks/paginator.css');
+@import url('../blocks/about.css');
+@import url('../blocks/news.css');
+@import url('../blocks/footer.css');
+@import url('../blocks/social__path.css');
+@import url('../blocks/dropdown__menu.css');
 
 
 
