--- a/css/blocks/social__path.css
+++ b/css/blocks/social__path.css
@@ -40,7 +40,7 @@
   transform: translate(-50%, -50%);
   width: 36px; 
   height: 36px;
-  background:url('/img/icons/socials/css_sprites.png') -10px -10px;
+  background:url("../..img/icons/socials/css_sprites.png") -10px -10px;
 }
 
 
@@ -58,7 +58,7 @@
   transform: translate(-50%, -50%);
   width: 36px; 
   height: 36px;
-  background: url('/img/icons/socials/css_sprites.png') -66px -10px;
+  background: url('../../img/icons/socials/css_sprites.png') -66px -10px;
   transition: opacity .2s;
 }
 
@@ -71,7 +71,7 @@
   transform: translate(-50%, -50%);
   width: 36px; 
   height: 36px;
-  background: url('/img/icons/socials/css_sprites.png') -66px -122px;
+  background: url('../../img/icons/socials/css_sprites.png') -66px -122px;
   opacity: 0;
   transition: opacity .2s;
 }
@@ -96,7 +96,7 @@
   transform: translate(-50%, -50%);
   width: 36px; 
   height: 36px;
-  background: url('/img/icons/socials/css_sprites.png') -10px -66px;
+  background: url('../../img/icons/socials/css_sprites.png') -10px -66px;
   transition: opacity .2s;
 }
 
@@ -109,7 +109,7 @@
   transform: translate(-50%, -50%);
   width: 36px; 
   height: 36px;
-  background: url('/img/icons/socials/css_sprites.png') -66px -66px;
+  background: url('../../img/icons/socials/css_sprites.png') -66px -66px;
   opacity: 0;
   transition: opacity .2s;
 }
@@ -134,7 +134,7 @@
   transform: translate(-50%, -50%);
   width: 36px; 
   height: 36px;
-  background: url('/img/icons/socials/css_sprites.png') -122px -10px;
+  background: url('../../img/icons/socials/css_sprites.png') -122px -10px;
   transition: opacity .2s;
 }
 
@@ -147,7 +147,7 @@
   transform: translate(-50%, -50%);
   width: 36px; 
   height: 36px;
-  background: url('/img/icons/socials/css_sprites.png') -122px -66px;
+  background: url('../../img/icons/socials/css_sprites.png') -122px -66px;
   opacity: 0;
   transition: opacity .2s;
 }
