--- a/css/blocks/about.css
+++ b/css/blocks/about.css
@@ -11,7 +11,7 @@
   display: block;
   width: 488px;
   height: 502px;
-  background: url(/img/decor/chess.jpg) center center / cover no-repeat ;
+  background: url("../../img/decor/chess.jpg") center center / cover no-repeat ;
 }
 
 .about__preview {
